--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,14 @@
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>3.6.1</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
